Fixed some bugs, found new bugs...